--- a/cucumber-maven-report/cucumber-html-reports/overview-steps.html
+++ b/cucumber-maven-report/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Automation</td>
               <td>1</td>
-            <td>09 Oct 2020, 07:34</td>
+            <td>10 Oct 2020, 07:10</td>
     </tr>
   </tbody>
 </table>
@@ -113,101 +113,101 @@ $(document).ready(function() {
 
         <tbody>
                       <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.click_on_save_button()</td>
+              <td class="location">com.automation.stepdef.AddUserSteps.fill_required_details_with_password_mismatch()</td>
               <td>1</td>
-              <td class="duration" data-value="136000000">136ms</td>
-              <td class="duration" data-value="136000000">136ms</td>
+              <td class="duration" data-value="466000000">466ms</td>
+              <td class="duration" data-value="466000000">466ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.user_fills_required_details_on_add_user_page()</td>
+              <td class="location">com.automation.stepdef.AddUserSteps.verify_password_mismatch_error_msg()</td>
               <td>1</td>
-              <td class="duration" data-value="522000000">522ms</td>
-              <td class="duration" data-value="522000000">522ms</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="0">000ms</td>
+              <td class="duration" data-value="0">000ms</td>
+              <td class="failed">0.00%</td>
             </tr>
                       <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.verify_add_user_success_message_is_dispalyed()</td>
+              <td class="location">com.automation.stepdef.AddUserSteps.verify_save_button_is_disabled()</td>
               <td>1</td>
-              <td class="duration" data-value="1902000000">1s 902ms</td>
-              <td class="duration" data-value="1902000000">1s 902ms</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="24000000">024ms</td>
+              <td class="duration" data-value="24000000">024ms</td>
+              <td class="failed">0.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.AddUserSteps.verify_user_is_on_add_user_page()</td>
               <td>1</td>
-              <td class="duration" data-value="120000000">120ms</td>
-              <td class="duration" data-value="120000000">120ms</td>
+              <td class="duration" data-value="149000000">149ms</td>
+              <td class="duration" data-value="149000000">149ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.click_on_users_tab()</td>
               <td>1</td>
-              <td class="duration" data-value="603000000">603ms</td>
-              <td class="duration" data-value="603000000">603ms</td>
+              <td class="duration" data-value="1370000000">1s 370ms</td>
+              <td class="duration" data-value="1370000000">1s 370ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.select_user_management_menu()</td>
               <td>1</td>
-              <td class="duration" data-value="97000000">097ms</td>
-              <td class="duration" data-value="97000000">097ms</td>
+              <td class="duration" data-value="75000000">075ms</td>
+              <td class="duration" data-value="75000000">075ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.user_select_admin_menu()</td>
               <td>1</td>
-              <td class="duration" data-value="1337000000">1s 337ms</td>
-              <td class="duration" data-value="1337000000">1s 337ms</td>
+              <td class="duration" data-value="1481000000">1s 481ms</td>
+              <td class="duration" data-value="1481000000">1s 481ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.verify_user_is_on_home_page()</td>
               <td>1</td>
-              <td class="duration" data-value="116000000">116ms</td>
-              <td class="duration" data-value="116000000">116ms</td>
+              <td class="duration" data-value="122000000">122ms</td>
+              <td class="duration" data-value="122000000">122ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.Hooks.cleanUp()</td>
               <td>1</td>
-              <td class="duration" data-value="744000000">744ms</td>
-              <td class="duration" data-value="744000000">744ms</td>
+              <td class="duration" data-value="697000000">697ms</td>
+              <td class="duration" data-value="697000000">697ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.Hooks.setUp()</td>
               <td>1</td>
-              <td class="duration" data-value="6335000000">6s 335ms</td>
-              <td class="duration" data-value="6335000000">6s 335ms</td>
+              <td class="duration" data-value="6774000000">6s 774ms</td>
+              <td class="duration" data-value="6774000000">6s 774ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.LoginSteps.user_login_with_admin_access()</td>
               <td>1</td>
-              <td class="duration" data-value="4052000000">4s 052ms</td>
-              <td class="duration" data-value="4052000000">4s 052ms</td>
+              <td class="duration" data-value="4352000000">4s 352ms</td>
+              <td class="duration" data-value="4352000000">4s 352ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.LoginSteps.user_open_orange_hrm_website()</td>
               <td>1</td>
-              <td class="duration" data-value="3365000000">3s 365ms</td>
-              <td class="duration" data-value="3365000000">3s 365ms</td>
+              <td class="duration" data-value="3333000000">3s 333ms</td>
+              <td class="duration" data-value="3333000000">3s 333ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.UserListingSteps.user_click_on_Add_button()</td>
               <td>1</td>
-              <td class="duration" data-value="821000000">821ms</td>
-              <td class="duration" data-value="821000000">821ms</td>
+              <td class="duration" data-value="817000000">817ms</td>
+              <td class="duration" data-value="817000000">817ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.UserListingSteps.verify_user_is_on_user_listing_page()</td>
-              <td>2</td>
-              <td class="duration" data-value="209000000">209ms</td>
-              <td class="duration" data-value="104500000">104ms</td>
+              <td>1</td>
+              <td class="duration" data-value="97000000">097ms</td>
+              <td class="duration" data-value="97000000">097ms</td>
               <td class="passed">100.00%</td>
             </tr>
                   </tbody>
@@ -215,9 +215,9 @@ $(document).ready(function() {
         <tfoot class="total">
           <tr>
             <td>14</td>
-            <td>15</td>
-            <td class="duration">20s 359ms</td>
-            <td class="duration">1s 357ms</td>
+            <td>14</td>
+            <td class="duration">19s 757ms</td>
+            <td class="duration">1s 411ms</td>
             <td>Totals</td>
           </tr>
         </tfoot>
