--- a/cucumber-maven-report/cucumber-html-reports/overview-tags.html
+++ b/cucumber-maven-report/cucumber-html-reports/overview-tags.html
@@ -48,28 +48,28 @@ $(document).ready(function() {
   $(document).ready(function() {
 
     var chartData = {
-        labels:  [] ,
+        labels:  [ "@wip", ] ,
         datasets: [
             {
                 label: "Passed",
                 backgroundColor: "#92DD96",
-                data:  []             },
+                data:  [ 83.33, ]             },
             {
                 label: "Failed",
                 backgroundColor: "#F2928C",
-                data:  []             },
+                data:  [ 8.33, ]             },
             {
                 label: "Skipped",
                 backgroundColor: "#8AF",
-                data:  []             },
+                data:  [ 8.33, ]             },
             {
                 label: "Pending",
                 backgroundColor: "#F5F28F",
-                data:  []             },
+                data:  [ 0.00, ]             },
             {
                 label: "Undefined",
                 backgroundColor: "#F5B975",
-                data:  []             }
+                data:  [ 0.00, ]             }
         ]
     };
 
@@ -130,7 +130,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Automation</td>
               <td>1</td>
-            <td>09 Oct 2020, 07:34</td>
+            <td>10 Oct 2020, 07:10</td>
     </tr>
   </tbody>
 </table>
@@ -149,12 +149,101 @@ $(document).ready(function() {
 </div>
 
 
+  <div class="container-fluid" id="charts">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <canvas id="tags-chart" height="50"></canvas>
+      </div>
+    </div>
+  </div>
 
 <br>
 <div class="container-fluid" id="report">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-              <p>You have no tags in your cucumber report</p>
+              
+<table id="tablesorter" class="stats-table table-hover">
+  
+<thead>
+  <tr class="header dont-sort">
+        <th></th>
+    <th colspan="6">Steps</th>
+    <th colspan="3">Scenarios</th>
+    <th colspan="2">Features</th>
+  </tr>
+  <tr>
+    <th>Tag</th>
+        <th class="passed">Passed</th>
+    <th class="failed">Failed</th>
+    <th class="skipped">Skipped</th>
+    <th class="pending">Pending</th>
+    <th class="undefined">Undefined</th>
+    <th class="total">Total</th>
+
+    <th class="passed">Passed</th>
+    <th class="failed">Failed</th>
+    <th class="total">Total</th>
+
+    <th>Duration</th>
+    <th>Status</th>
+  </tr>
+</thead>
+
+
+  <tbody>
+          <tr>
+        <td class="tagname"><a href="report-tag_wip.html">@wip</a></td>
+        
+        <td      class="passed"    >10</td>
+        <td      class="failed"    >1</td>
+        <td     class="skipped"   >1</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">12</td>
+
+        <td >0</td>
+        <td  class="failed"    >1</td>
+        <td class="total">1</td>
+
+        <td class="duration" data-value="12286000000">12s 286ms</td>
+        <td class="failed">Failed</td>
+      </tr>
+      </tbody>
+
+  <tfoot class="total">
+    <tr>
+      <td>1</td>
+            <td>10</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>12</td>
+
+      <td>0</td>
+      <td>1</td>
+      <td>1</td>
+
+      <td class="duration">12s 286ms</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+            <td>83.33%</td>
+      <td>8.33%</td>
+      <td>8.33%</td>
+      <td>0.00%</td>
+      <td>0.00%</td>
+      <td></td>
+      <td>0.00%</td>
+      <td>100.00%</td>
+      <td></td>
+      <td></td>
+      <td>0.00%</td>
+    </tr>
+  </tfoot>
+</table>
+
           </div>
   </div>
 </div>
