first scenario completed

--- a/cucumber-maven-report/cucumber-html-reports/overview-steps.html
+++ b/cucumber-maven-report/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Automation</td>
               <td>1</td>
-            <td>10 Oct 2020, 07:10</td>
+            <td>15 Oct 2020, 20:34</td>
     </tr>
   </tbody>
 </table>
@@ -113,111 +113,69 @@ $(document).ready(function() {
 
         <tbody>
                       <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.fill_required_details_with_password_mismatch()</td>
+              <td class="location">com.automation.stepdef.HomeSteps.hover_mouse_on_job_menu()</td>
               <td>1</td>
-              <td class="duration" data-value="466000000">466ms</td>
-              <td class="duration" data-value="466000000">466ms</td>
-              <td class="passed">100.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.verify_password_mismatch_error_msg()</td>
-              <td>1</td>
-              <td class="duration" data-value="0">000ms</td>
-              <td class="duration" data-value="0">000ms</td>
-              <td class="failed">0.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.verify_save_button_is_disabled()</td>
-              <td>1</td>
-              <td class="duration" data-value="24000000">024ms</td>
-              <td class="duration" data-value="24000000">024ms</td>
-              <td class="failed">0.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.AddUserSteps.verify_user_is_on_add_user_page()</td>
-              <td>1</td>
-              <td class="duration" data-value="149000000">149ms</td>
-              <td class="duration" data-value="149000000">149ms</td>
-              <td class="passed">100.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.HomeSteps.click_on_users_tab()</td>
-              <td>1</td>
-              <td class="duration" data-value="1370000000">1s 370ms</td>
-              <td class="duration" data-value="1370000000">1s 370ms</td>
-              <td class="passed">100.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.HomeSteps.select_user_management_menu()</td>
-              <td>1</td>
-              <td class="duration" data-value="75000000">075ms</td>
-              <td class="duration" data-value="75000000">075ms</td>
+              <td class="duration" data-value="198000000">198ms</td>
+              <td class="duration" data-value="198000000">198ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.user_select_admin_menu()</td>
               <td>1</td>
-              <td class="duration" data-value="1481000000">1s 481ms</td>
-              <td class="duration" data-value="1481000000">1s 481ms</td>
+              <td class="duration" data-value="786000000">786ms</td>
+              <td class="duration" data-value="786000000">786ms</td>
+              <td class="passed">100.00%</td>
+            </tr>
+                      <tr>
+              <td class="location">com.automation.stepdef.HomeSteps.validate_list_of_dropdown_is_present_in_below_order(io.cucumber.datatable.DataTable)</td>
+              <td>1</td>
+              <td class="duration" data-value="273000000">273ms</td>
+              <td class="duration" data-value="273000000">273ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.HomeSteps.verify_user_is_on_home_page()</td>
               <td>1</td>
-              <td class="duration" data-value="122000000">122ms</td>
-              <td class="duration" data-value="122000000">122ms</td>
+              <td class="duration" data-value="651000000">651ms</td>
+              <td class="duration" data-value="651000000">651ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.Hooks.cleanUp()</td>
               <td>1</td>
-              <td class="duration" data-value="697000000">697ms</td>
-              <td class="duration" data-value="697000000">697ms</td>
+              <td class="duration" data-value="730000000">730ms</td>
+              <td class="duration" data-value="730000000">730ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.Hooks.setUp()</td>
               <td>1</td>
-              <td class="duration" data-value="6774000000">6s 774ms</td>
-              <td class="duration" data-value="6774000000">6s 774ms</td>
+              <td class="duration" data-value="6666000000">6s 666ms</td>
+              <td class="duration" data-value="6666000000">6s 666ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.LoginSteps.user_login_with_admin_access()</td>
               <td>1</td>
-              <td class="duration" data-value="4352000000">4s 352ms</td>
-              <td class="duration" data-value="4352000000">4s 352ms</td>
+              <td class="duration" data-value="1895000000">1s 895ms</td>
+              <td class="duration" data-value="1895000000">1s 895ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
               <td class="location">com.automation.stepdef.LoginSteps.user_open_orange_hrm_website()</td>
               <td>1</td>
-              <td class="duration" data-value="3333000000">3s 333ms</td>
-              <td class="duration" data-value="3333000000">3s 333ms</td>
-              <td class="passed">100.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.UserListingSteps.user_click_on_Add_button()</td>
-              <td>1</td>
-              <td class="duration" data-value="817000000">817ms</td>
-              <td class="duration" data-value="817000000">817ms</td>
-              <td class="passed">100.00%</td>
-            </tr>
-                      <tr>
-              <td class="location">com.automation.stepdef.UserListingSteps.verify_user_is_on_user_listing_page()</td>
-              <td>1</td>
-              <td class="duration" data-value="97000000">097ms</td>
-              <td class="duration" data-value="97000000">097ms</td>
+              <td class="duration" data-value="656000000">656ms</td>
+              <td class="duration" data-value="656000000">656ms</td>
               <td class="passed">100.00%</td>
             </tr>
                   </tbody>
 
         <tfoot class="total">
           <tr>
-            <td>14</td>
-            <td>14</td>
-            <td class="duration">19s 757ms</td>
-            <td class="duration">1s 411ms</td>
+            <td>8</td>
+            <td>8</td>
+            <td class="duration">11s 855ms</td>
+            <td class="duration">1s 481ms</td>
             <td>Totals</td>
           </tr>
         </tfoot>
