--- a/cucumber-maven-report/cucumber-html-reports/overview-tags.html
+++ b/cucumber-maven-report/cucumber-html-reports/overview-tags.html
@@ -53,15 +53,15 @@ $(document).ready(function() {
             {
                 label: "Passed",
                 backgroundColor: "#92DD96",
-                data:  [ 83.33, ]             },
+                data:  [ 100.00, ]             },
             {
                 label: "Failed",
                 backgroundColor: "#F2928C",
-                data:  [ 8.33, ]             },
+                data:  [ 0.00, ]             },
             {
                 label: "Skipped",
                 backgroundColor: "#8AF",
-                data:  [ 8.33, ]             },
+                data:  [ 0.00, ]             },
             {
                 label: "Pending",
                 backgroundColor: "#F5F28F",
@@ -130,7 +130,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Automation</td>
               <td>1</td>
-            <td>10 Oct 2020, 07:10</td>
+            <td>15 Oct 2020, 20:34</td>
     </tr>
   </tbody>
 </table>
@@ -194,52 +194,52 @@ $(document).ready(function() {
           <tr>
         <td class="tagname"><a href="report-tag_wip.html">@wip</a></td>
         
-        <td      class="passed"    >10</td>
-        <td      class="failed"    >1</td>
-        <td     class="skipped"   >1</td>
+        <td      class="passed"    >6</td>
         <td >0</td>
         <td >0</td>
-        <td class="total">12</td>
+        <td >0</td>
+        <td >0</td>
+        <td class="total">6</td>
 
+        <td  class="passed"    >1</td>
         <td >0</td>
-        <td  class="failed"    >1</td>
         <td class="total">1</td>
 
-        <td class="duration" data-value="12286000000">12s 286ms</td>
-        <td class="failed">Failed</td>
+        <td class="duration" data-value="4459000000">4s 459ms</td>
+        <td class="passed">Passed</td>
       </tr>
       </tbody>
 
   <tfoot class="total">
     <tr>
       <td>1</td>
-            <td>10</td>
-      <td>1</td>
-      <td>1</td>
+            <td>6</td>
       <td>0</td>
       <td>0</td>
-      <td>12</td>
+      <td>0</td>
+      <td>0</td>
+      <td>6</td>
 
+      <td>1</td>
       <td>0</td>
       <td>1</td>
-      <td>1</td>
 
-      <td class="duration">12s 286ms</td>
+      <td class="duration">4s 459ms</td>
       <td></td>
     </tr>
     <tr>
       <td></td>
-            <td>83.33%</td>
-      <td>8.33%</td>
-      <td>8.33%</td>
+            <td>100.00%</td>
+      <td>0.00%</td>
+      <td>0.00%</td>
       <td>0.00%</td>
       <td>0.00%</td>
       <td></td>
-      <td>0.00%</td>
       <td>100.00%</td>
-      <td></td>
-      <td></td>
       <td>0.00%</td>
+      <td></td>
+      <td></td>
+      <td>100.00%</td>
     </tr>
   </tfoot>
 </table>
